# audiobook_tools

./: README.md  pyproject.toml
audiobook_tools/: fixmetadata.py  helpers.py  m4b2mp3.py
tests/: test_audiobook_tools.py
